- fixed some ui misalignments

--- a/src/app/shared/profile/profile.component.scss
+++ b/src/app/shared/profile/profile.component.scss
@@ -1,8 +1,8 @@
 @import 'palette';
 .profile {
   position: absolute;
-  top: 30px;
-  left: 30px;
+  top: 36px;
+  left: 25px;
   z-index: 1;
   cursor: pointer;
   padding: 10px;
